# asciizr-rust

./: .gitignore  Cargo.toml  README.md
src/: char_map.rs  main.rs  pixel.rs  read_bytes.rs
